# chip8-py

./: .gitignore  README.md  pyproject.toml
src/pychip8/: __main__.py  cpu.py  display.py  memory.py  timers.py
