[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chip8-py"
version = "0.1.0"
description = "A CHIP-8 emulator ecosystem."
authors = [{ name = "las-r" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "platformdirs",
    "raylib",
]

[project.scripts]
chip8py = "chip8py.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chip8py*"]

[tool.setuptools.package-data]
pychip8 = ["config.toml"]